@@ -74,3 +74,105 @@
 		</config>
 	</TCEforms>
 </lightboxheight>
+<responsive>
+	<TCEforms>
+		<label>LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:responsive</label>
+		<config>
+			<type>check</type>
+			<default>1</default>
+		</config>
+	</TCEforms>
+</responsive>
+<showImagenav>
+	<TCEforms>
+		<label>LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:showImagenav</label>
+		<config>
+			<type>check</type>
+			<default>1</default>
+		</config>
+	</TCEforms>
+</showImagenav>
+<transition>
+	<TCEforms>
+		<label>LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:transition</label>
+		<config>
+			<type>select</type>
+			<items type="array">
+				<numIndex index="1" type="array">
+					<numIndex index="0">slide</numIndex>
+					<numIndex index="1">slide</numIndex>
+				</numIndex>
+				<numIndex index="2" type="array">
+					<numIndex index="0">fade</numIndex>
+					<numIndex index="1">fade</numIndex>
+				</numIndex>
+				<numIndex index="3" type="array">
+					<numIndex index="0">flash</numIndex>
+					<numIndex index="1">flash</numIndex>
+				</numIndex>
+				<numIndex index="4" type="array">
+					<numIndex index="0">pulse</numIndex>
+					<numIndex index="1">pulse</numIndex>
+				</numIndex>
+				<numIndex index="5" type="array">
+					<numIndex index="0">fadeslide</numIndex>
+					<numIndex index="1">fadeslide</numIndex>
+				</numIndex>
+			</items>
+		</config>
+	</TCEforms>
+</transition>
+<transitionSpeed>
+    <TCEforms>
+        <label>LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:transitionSpeed</label>
+        <config>
+            <type>input</type>
+            <size>3</size>
+            <default>400</default>
+        </config>
+    </TCEforms>
+</transitionSpeed>
+<autoplay>
+    <TCEforms>
+        <label>LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:autoplay</label>
+        <config>
+            <type>input</type>
+            <size>3</size>
+            <default>0</default>
+        </config>
+    </TCEforms>
+</autoplay>
+<imageCrop>
+    <TCEforms>
+        <label>LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop</label>
+        <config>
+            <type>select</type>
+            <items type="array">
+                <numIndex index="1" type="array">
+                    <numIndex index="0">LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop.items.1</numIndex>
+                    <numIndex index="1">0</numIndex>
+                </numIndex>
+                <numIndex index="2" type="array">
+                    <numIndex index="0">LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop.items.2</numIndex>
+                    <numIndex index="1">1</numIndex>
+                </numIndex>
+                <numIndex index="3" type="array">
+                    <numIndex index="0">LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop.items.3</numIndex>
+                    <numIndex index="1">height</numIndex>
+                </numIndex>
+                <numIndex index="4" type="array">
+                    <numIndex index="0">LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop.items.4</numIndex>
+                    <numIndex index="1">width</numIndex>
+                </numIndex>
+                <numIndex index="5" type="array">
+                    <numIndex index="0">LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop.items.5</numIndex>
+                    <numIndex index="1">landscape</numIndex>
+                </numIndex>
+                <numIndex index="6" type="array">
+                    <numIndex index="0">LLL:EXT:pnf_gallery/themes/simplegallery/locallang_flexform.xml:imageCrop.items.6</numIndex>
+                    <numIndex index="1">portrait</numIndex>
+                </numIndex>
+            </items>
+        </config>
+    </TCEforms>
+</imageCrop>
