@@ -21,7 +21,13 @@
 			width: ###WIDTH###,
 			height: ###HEIGHT###,
 			thumbnails: ###THUMBNAIL###,
-			lightbox: ###LIGHTBOX###
+			lightbox: ###LIGHTBOX###,
+			responsive:###RESPONSIVE###,
+            showImagenav:###SHOWIMAGENAV###,
+            transition:'###TRANSITION###',
+            transitionSpeed:###TRANSITIONSPEED###,
+            autoplay:###AUTOPLAY###,
+            imageCrop:###IMAGECROP###
 		});
 	});
 	/*]]>*/
