@@ -1,3 +1,6 @@
+2013-08-02 Guillaume GERMAIN <guillaume.germain@plan-net.fr>
+	* Add configurations for simplegallery
+	
 2013-06-03 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Add lightbox keyboard navigation
 	
